# fallout1-ce

./: .gitattributes  CMakeLists.txt  CMakeSettings.json  README.fr.md  README.md  TODO.md
.github/workflows/: build.yml  ci-build.yml  release.yml
docs/: vulkan_debug_tools.md  vulkan_implementation_guide.md  vulkan_integration_guide.md
scripts/: build_win64.ps1
shaders/: device_address.vert  fallout_sprite.frag  fallout_sprite.vert  palette_lut.frag  sprite.frag  sprite.vert
src/: fps_limiter.cc  fps_limiter.h  stub_main.cc  video_mve_gpu.cpp  vk_platform.hpp
src/anim/: AnimationData.h  AnimationManager.cpp  AnimationManager.h  AnimationPlayer.cpp  AnimationPlayer.h
src/cache/: AssetCache.cpp  AssetCache.h
src/game/: AssetConfig.cpp  AssetConfig.h  ConfigParser.cpp  ConfigParser.h  GameMath.h  IsometricCamera.cpp  IsometricCamera.h  ResourceManager.cpp  ResourceManager.h  config.h  game.cc  gconfig.cc  graphics_advanced.cc  graphics_advanced.h  object_types.h  options.cc
src/graphics/: GltfLoader.cpp  GltfLoader.h  IsoCamera.cpp  IsoCamera.hpp  RenderObject.cpp  RenderObject.h  RenderableTypes.h  SpriteTypes.h  diablo_animation_system.hpp  fallout_animation_system.hpp  fallout_asset_loader.hpp  fallout_asset_system.hpp  fallout_legacy_asset_loader.hpp  fallout_sprite_renderer.cpp  fallout_sprite_renderer.hpp  (+11 more)
tests/: CMakeLists.txt  fps_limiter_test.cpp  gltf_loader_test.cpp  test_batch.cpp  test_cache.cpp  test_harness.h  vulkan_available_test.cpp
tests/assets/: simple.gltf
tests/scripts/: benchmark_backend.sh  stress_test.sh
tools/: frm_extract.py
(+87 files in other folders)
